# atic-sspiem

./: CMakeLists.txt  LICENSE  TODOs.txt
src/: SSPIEm.cpp  core.c  core.cpp  hardware.c  hardware.cpp  intrface.c  intrface.cpp  intrface.h  main.c  main.cpp  reedl-generic.h  reedl-ictrl-cmd.c  reedl-ictrl-cmd.h  reedl-ictrl.c  reedl-ictrl.h  reedl-utils.c  reedl-utils.h  usb_hw.cpp  util.cpp
vsproj/: atic-sspiem.sln  atic-sspiem.vcxproj  atic-sspiem.vcxproj.filters  build.sh
